added payment testing mode

--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ EMAIL_PASS=huiq cpcg afkl ozzi
 
 RAZORPAY_KEY_ID=rzp_test_mZhppGRbunzbZn 
 RAZORPAY_KEY_SECRET=PFEvdC8mTxZhWpHfyt7q2qi0
-FRONTEND_URL=https://megashop-8d076.web.app
+FRONTEND_URL=https://megashop-1.web.app
